# Rusty-Bargain-App

./: .gitignore  404.html  README.md  docker-compose.yml  index.html  logging_config.py  mkdocs.yml  objects.inv  pyproject.toml
.astro/: config.yaml
api/: index.html
backend/: Dockerfile  ELT.py  label_encoder_brand.pkl  label_encoder_model.pkl  main.py  model.pkl  preprocessing.py  requirements.txt  scaler.pkl  setup.py
backend/api/: router.py
backend/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
backend/catboost_info/learn/: events.out.tfevents
backend/crud/: controller.py  models.py  schemas.py
backend/data/: raw_data_loader.py  seeder.py
backend/database/: database.py
dags/: dag_airbyte.py
data/: processed_data_single.csv  raw_data_loader.py
docs/: api.md  index.md
frontend/: Dockerfile  app.py  requirements.txt
frontend/.streamlit/: config.toml
search/: search_index.json
