[tool.poetry]
name = "rusty-bargain"
version = "0.1.0"
description = ""
authors = ["Daniel Ribeiro <danizilla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
sqlalchemy = "^2.0.36"
streamlit = "^1.41.1"
dbt-core = "^1.9.1"
logfire = "^2.11.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.34.0"
scikit-learn = "^1.6.0"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
