[tool.poetry]
name = "rusty-bargain"
version = "0.1.0"
description = ""
authors = ["Daniel Ribeiro <danizilla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.3"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
streamlit = "^1.41.1"
dbt-core = "^1.9.1"
logfire = "^2.11.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.34.0"
scikit-learn = "^1.6.0"
apache-airflow = "^2.10.4"
sqlalchemy = "1.4.36"
astro = "^0.2.7"
psycopg2 = "^2.9.10"
catboost = "^1.2.7"
opentelemetry-instrumentation-requests = "^0.50b0"
opentelemetry-instrumentation-sqlalchemy = "^0.50b0"
setuptools = "^75.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
